src/test/ui/suggestions/impl-trait-missing-lifetime.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/impl-trait-missing-lifetime.rs:5:50
   |
LL | fn g(x: impl Iterator<Item = &'_ ()>) -> Option<&'_ ()> { x.next() }
   |                                                  ^^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value with an elided lifetime, but the lifetime cannot be derived from the arguments
help: consider using the `'static` lifetime
   |
LL | fn g(x: impl Iterator<Item = &'_ ()>) -> Option<&'static ()> { x.next() }
   |                                                  ~~~~~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
